<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:cropToPadding="true"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/banner" />

    <!-- <Button
        android:id="@+id/about_button"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="150dp"
        android:layout_marginEnd="50dp"
        android:background="@drawable/button"
        android:backgroundTint="#829FFE"
        android:text="@string/about"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/add_button"
        app:layout_constraintTop_toTopOf="@+id/guideline2"
        app:layout_constraintVertical_bias="0.0" /> -->

    <Button
        android:id="@+id/add_button"
        android:layout_width="@dimen/menu_button_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:background="@drawable/button"
        android:backgroundTint="#3061FF"
        android:fontFamily="@font/montserrat_regular"
        android:text="@string/add_computer"
        android:textColor="#FFFFFF"
        app:icon="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline2"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/display_button"
        android:layout_width="@dimen/menu_button_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:background="@drawable/button"
        android:backgroundTint="#3061FF"
        android:fontFamily="@font/montserrat_regular"
        android:text="@string/view_computers"
        android:textColor="#FFFFFF"
        app:icon="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_button" />

    <ImageView
        android:id="@+id/about_button"
        android:layout_width="@dimen/info_button_size"
        android:layout_height="@dimen/info_button_size"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/info_button" />

    <Button
        android:id="@+id/exit_button"
        android:layout_width="@dimen/menu_button_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:background="@drawable/button"
        android:backgroundTint="#FF4343"
        android:fontFamily="@font/montserrat_regular"
        android:onClick="exitApp"
        android:text="@string/exit_app"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/qr_button"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="270dp"
        android:fontFamily="@font/montserrat_regular"
        android:gravity="center"
        android:text="@string/my_computer_store"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.451" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="337dp" />

    <Button
        android:id="@+id/qr_button"
        android:layout_width="@dimen/menu_button_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:background="@drawable/button"
        android:backgroundTint="#829FFE"
        android:fontFamily="@font/montserrat_regular"
        android:text="@string/scan_qr_code"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/display_button" />

    <ImageView
        android:id="@+id/settings_button"
        android:layout_width="@dimen/info_button_size"
        android:layout_height="@dimen/info_button_size"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/settings" />

</androidx.constraintlayout.widget.ConstraintLayout>